css/style.css
/* ... */
@media screen and (max-device-width: 535px) {
    .main .about-area{
        text-align: center;
        padding-top: 5rem;
        padding-bottom: 5rem;
    }
    .main .about-area .card-header{
        font-weight: 550;
        font-size: 14vw;
    }
    .main .about-area .card h5{
        font-size: 6vw;
        font-weight: 400;
    }
}

/* End About Area */

/* Start Project Area */
@media screen and (min-device-width: 536px) {
    .main .project-area h1{
        font-size: 4rem;
        padding-bottom: 1rem;
    }
}

@media screen and (max-device-width: 535px) {
    .main .project-area h1{
        font-size: 14vw;
        padding-bottom: 1rem;
    }
}
.main .project-area{
    padding-top: 4rem;
}

.main .project-area .button-group{
    margin-top: 1rem;
    margin-bottom: 2rem;
}

.main .project-area .button-group .active{
    background-color: #43caff;
    color: white;
    transition: 0.5s;
}

.main .project-area .button-group button{
    background: transparent;
    border: none;
    font: normal 550 24px/24px var(--roboto);
    padding: 1rem;
    text-transform: uppercase;
}

.main .project-area .button-group button:hover{
    color: var(--primary-color);
    transition: 0.5s;
}

.main .project-area h4{
    font: normal 600 25px/25px var(--roboto);
}
@media screen and (min-device-width: 1201px) {
    .main .project-area .grid .our-project a img{
        max-width: 22rem;
    }
}

@media screen and (max-device-width: 1200px) {
    .main .project-area .grid .our-project a img{
        max-width: 19rem;
    }
}

.main .project-area .grid .our-project a img:hover{
    filter: brightness(1.05) drop-shadow(0px 0px 10px #ababab);
    transition: 0.5s;
}

.modal .btn {
    font-family: var(--roboto);
    font-weight: 500;
}
.modal p,
.modal h3{
    margin: 1rem 1rem 0 1rem;
}

.modal .list{
    margin-left: 1rem;
}

.modal .carousel{
    margin: 1rem 1rem;
}
.modal .carousel img{
    max-height: 40rem;
}

@media screen and (min-device-width: 992px) {
    .carousel-control-next-icon{
        width: 2rem;
        height: 2rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
    }
    .carousel-control-prev-icon{
        width: 2rem;
        height: 2rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
    }
    .modal  .carousel-control-next{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        padding: 1rem;
    }
    .modal .carousel-control-prev{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        padding: 1rem;
    }
}

@media screen and (max-device-width: 991px) {
    .carousel-control-next-icon{
        width: 1rem;
        height: 1rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
    }
    .carousel-control-prev-icon{
        width: 1rem;
        height: 1rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
    }
    .modal  .carousel-control-next{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        transform: translateY(-50%);
        padding: 0.7rem;
    }
    .modal .carousel-control-prev{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        transform: translateY(-50%);
        padding: 0.7rem;
    }
}

.modal .carousel-control-prev:hover, 
.modal  .carousel-control-next:hover{
    opacity: 1;
}

.imgWrapper {
    text-align: center;
    margin: 1rem 0;
}
.imgWrapper img{
    width: 100%;
    max-width: 30rem;
}

.videoWrapper {
    position: relative;
    margin: 1rem 0;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}

.videoWrapper iframe {
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
}

.button-row {
    margin-top: 1rem;
    text-align: center;
}

/* End Project Area */

/* Start Contact Area */

.socials{
    list-style-type: none;
    margin-top: 0;
    padding: 0;
}

.contact-area .contact-image {
    text-align: center;
}
/* Scale down images for smaller screens */
@media screen and (min-device-width: 536px) {
    .contact-area .contact-title{
        padding-top: 4rem;
        font-size: 4rem;
        margin-bottom: 2rem;
    }
    .contact-area .contact-text{
        font-size: 1.8rem;
        font-weight: 400;
    }
    .contact-area .contact-image img{
        width: 20rem;
    }
    .socials li a {
        white-space: nowrap;
        line-height: 75px;
        display: block;
        text-decoration: none;
        font-size: 18px;
        font-size: 1.8rem;
    }
    .socials img{
        width: 60px;
    }
}
/* ... */

